# botanica

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SPONSORS.md  demo_botanica.py
.github/: FUNDING.yml
src/: contextlite.rs  error.rs  lib.rs
src/database/: config.rs  mod.rs
src/migrations/: mod.rs  runner.rs  schemas.rs
src/queries/: family.rs  genus.rs  mod.rs  search.rs  species.rs  specimens.rs
src/tests/: database_tests.rs  family_tests.rs  genus_tests.rs  integration_tests.rs  mod.rs  model_tests.rs  species_tests.rs
src/types/: conservation.rs  cultivation.rs  family.rs  genus.rs  mod.rs  species.rs
