[package]
name = "botanica"
version = "0.1.0"
edition = "2021"
description = "Professional botanical cultivation database with AI-powered plant insights"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-A-Kuykendall/botanica"
keywords = ["botany", "cultivation", "database", "plants", "ai"]
categories = ["database", "science"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# ContextLite integration
contextlite-client = { version = "2.0.7", optional = true }

[features]
default = ["contextlite"]
contextlite = ["dep:contextlite-client"]

[dev-dependencies]
tokio-test = "0.4"
